--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,31 +2,34 @@ name: Build EXE
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install dependencies
         run: |
-          pip install pyinstaller pytube pydub pygame
+          pip install --upgrade pip
+          pip install pyinstaller
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile masteran-app/masteran_app.py
+          pyinstaller --onefile main.py
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: masteran-exe
-          path: dist/masteran_app.exe
+          name: app-exe
+          path: dist/main.exe
