--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,10 +26,10 @@ jobs:
 
       - name: Build EXE
         run: |
-          pyinstaller --onefile main.py
+          pyinstaller --onefile app.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-exe
-          path: dist/main.exe
+          path: dist/app.exe
