--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,32 @@
 name: Build EXE
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+  workflow_dispatch:   # dijalankan manual dari tab Actions
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-latest   # pakai Windows biar bisa build exe
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+    - name: Setup Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: "3.10"
 
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install pyinstaller
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytube pydub pygame pyinstaller
 
-      - name: Build EXE
-        run: |
-          pyinstaller --onefile app.py
+    - name: Build EXE with PyInstaller
+      run: |
+        pyinstaller --onefile masteran-app.py
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-exe
-          path: dist/app.exe
+    - name: Upload EXE artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: masteran-app-exe
+        path: dist/masteran-app.exe
