--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,32 +1,33 @@
 name: Build EXE
 
 on:
-  workflow_dispatch:   # dijalankan manual dari tab Actions
+  push:
+    branches:
+      - main
 
 jobs:
   build:
-    runs-on: windows-latest   # pakai Windows biar bisa build exe
+    runs-on: windows-latest
 
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pytube pydub pygame pyinstaller
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller pydub
 
-    - name: Build EXE with PyInstaller
-      run: |
-        pyinstaller --onefile masteran-app.py
+      - name: Build EXE with PyInstaller
+        run: pyinstaller --onefile main.py
 
-    - name: Upload EXE artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: masteran-app-exe
-        path: dist/masteran-app.exe
+      - name: Upload EXE artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-exe
+          path: dist/main.exe
